--- a/pages/shop/cart.html
+++ b/pages/shop/cart.html
@@ -17,20 +17,12 @@
                 </a>
             </picture>
             <ul>
-                <li>
-                    <a href="../../pages/shop/shop.html">SHOP</a>
-                </li>
-                <li>
-                    <a href="../../pages/admin/register.html">CONTACTO</a>
-                </li>
-                <li>
-                    <a href="../../pages/admin/login.html">LOGIN</a>
-                </li>
-                <li>
-                    <a href="../../pages/shop/cart.html">
-                        <img src="../../img/icons/cart-icon.svg" alt="icono de carrito">
-                    </a>
-                </li>
+
+                <li><a href="../../pages/shop/shop.html">SHOP</a></li>
+                <li> <a href="../../pages/shop/contact.html">CONTACTO</a></li>
+                <li> <a href="../../pages/admin/login.html">LOGIN</a></li>
+                <li><a href="../../pages/shop/cart.html"> <img src="../../img/icons/cart-icon.svg"
+                            alt="icono de carrito"> </a> </li>
             </ul>
         </nav>
     </header><!-- FIN HEADER -->
