--- a/pages/shop/item.html
+++ b/pages/shop/item.html
@@ -16,8 +16,9 @@
                         alt="Isologotipo de la marca funkoshop"></a>
             </picture>
             <ul>
+
                 <li><a href="../../pages/shop/shop.html">SHOP</a></li>
-                <li> <a href="../../pages/admin/register.html">CONTACTO</a></li>
+                <li> <a href="../../pages/shop/contact.html">CONTACTO</a></li>
                 <li> <a href="../../pages/admin/login.html">LOGIN</a></li>
                 <li><a href="../../pages/shop/cart.html"> <img src="../../img/icons/cart-icon.svg"
                             alt="icono de carrito"> </a> </li>
